# athena

./: AUTHORS  COPYING.EXTENSIONS  ChangeLog  ChangeLog-20000414  ChangeLog-20000625  ChangeLog-20000831  ChangeLog-20001018  ChangeLog-20010201  ChangeLog-20010420  ChangeLog-20041029  ChangeLog-20090417  HACKING  Makefile.am  Makefile.in  NEWS  README  README.commits  README.md  THANKS  aclocal.m4  configure  configure.in
athena-sendto-extension/: Makefile.am  Makefile.in  athena-nste.c  athena-nste.h  athena-sendto-module.c
cut-n-paste-code/: Makefile.in  README
data/: Makefile.am  Makefile.in  athena-autorun-software.desktop.in  athena-autorun-software.desktop.in.in  athena-autostart.desktop.in  athena-extras.placeholder  athena-suggested.placeholder  athena.desktop  athena.desktop.in  athena.desktop.in.in  com.solusos.Athena.service.in  dbus-interfaces.xml  freedesktop-dbus-interfaces.xml  org.freedesktop.AthenaFileManager1.service.in  org.freedesktop.FileManager1.service.in  org.gnome.Athena.service.in
data/icons/: Makefile.am  Makefile.in
debian/: athena-data.install  athena.install  athena.xpm  changelog  control  control.in  copyright  gir1.2-athena-3.0.install  libathena-extension-dev.install  libathena-extension1a.install  menu  rules  watch
docs/: Makefile.am  Makefile.in  architecture.txt  athena-connect-server.1  athena-internals.sxw  athena-io.txt  athena.1  athena.faq  dnd.txt  key_mouse_navigation.txt  recommended-books.html  smoketests.html  state-machines.txt  style-guide.html
docs/reference/: Makefile.am  Makefile.in
docs/reference/libathena-extension/: Makefile.am  Makefile.in  libathena-extension-docs.xml  libathena-extension-sections.txt  libathena-extension.types  version.xml.in
docs/reference/libathena-extension/html/: ch01.html  index.html  index.sgml  ix01.html  libathena-extension-athena-column-provider.html  libathena-extension-athena-column.html  libathena-extension-athena-extension-types.html  libathena-extension-athena-file-info.html  libathena-extension-athena-info-provider.html  libathena-extension-athena-location-widget-provider.html  libathena-extension-athena-menu-provider.html  libathena-extension-athena-menu.html  libathena-extension-athena-property-page-provider.html  libathena-extension-athena-property-page.html  libathena-extension.devhelp2  pt01.html
docs/reference/libathena-extension/tmpl/: athena-column-provider.sgml  athena-column.sgml  athena-extension-types.sgml  athena-file-info.sgml  athena-info-provider.sgml  athena-location-widget-provider.sgml  athena-menu-item.sgml  athena-menu-provider.sgml  athena-menu.sgml  athena-property-page-provider.sgml  athena-property-page.sgml
eel/: ChangeLog  Makefile.in  eel-accessibility.c  eel-vfs-extensions.h
icons/: Makefile.in
libathena-extension/: Makefile.am  Makefile.in  athena-column-provider.c  athena-column-provider.h  athena-column.c  athena-column.h  athena-extension-i18n.h  athena-extension-private.h  athena-extension-types.c  athena-extension-types.h  athena-file-info.c  athena-file-info.h  athena-info-provider.c  athena-info-provider.h  athena-location-widget-provider.c  athena-location-widget-provider.h  athena-menu-item.c  athena-menu-item.h  athena-menu-provider.c  athena-menu-provider.h  athena-menu.c  athena-menu.h  athena-property-page-provider.c  athena-property-page-provider.h  athena-property-page.c  athena-property-page.h  libathena-extension-uninstalled.pc.in  libathena-extension.pc.in
libathena-private/: Makefile.am  Makefile.in  README  athena-bookmark.c  athena-bookmark.h  athena-cell-renderer-text-ellipsized.c  athena-cell-renderer-text-ellipsized.h  athena-clipboard-monitor.c  athena-clipboard-monitor.h  athena-clipboard.c  athena-clipboard.h  athena-column-chooser.c  athena-column-chooser.h  athena-column-utilities.c  athena-column-utilities.h  athena-dbus-manager.c  athena-dbus-manager.h  athena-debug.c  athena-debug.h  athena-default-file-icon.c  athena-default-file-icon.h  athena-desktop-background.c  athena-desktop-background.h  athena-desktop-directory-file.c  athena-desktop-directory-file.h  athena-desktop-directory.c  athena-desktop-directory.h  athena-desktop-icon-file.c  athena-desktop-icon-file.h  athena-desktop-link-monitor.c  athena-desktop-link-monitor.h  athena-desktop-link.c  athena-desktop-link.h  athena-desktop-metadata.c  athena-desktop-metadata.h  athena-directory-async.c  athena-directory-notify.h  athena-directory-private.h  athena-directory.c  athena-directory.h  (+100 more)
po/: ChangeLog  POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  fy.po  ga.po  gl.po  (+74 more)
src/: Makefile.am  Makefile.in  athena-actions.h  athena-application.c  athena-application.h  athena-autorun-software.c  athena-bookmark-list.c  athena-bookmark-list.h  athena-bookmarks-window.c  athena-bookmarks-window.h  athena-connect-server-dialog-main.c  athena-connect-server-dialog-nonmain.c  athena-connect-server-dialog.c  athena-connect-server-dialog.h  athena-connect-server-operation.c  athena-connect-server-operation.h  athena-convert-metadata.c  athena-desktop-icon-view.c  athena-desktop-icon-view.h  athena-desktop-item-properties.c  athena-desktop-item-properties.h  athena-desktop-window.c  athena-desktop-window.h  athena-empty-view.c  athena-empty-view.h  athena-error-reporting.c  athena-error-reporting.h  athena-file-management-properties.c  athena-file-management-properties.h  athena-file-management-properties.ui  athena-floating-bar.c  athena-floating-bar.h  athena-freedesktop-dbus.c  athena-freedesktop-dbus.h  athena-icon-view-container.c  athena-icon-view-container.h  athena-icon-view.c  athena-icon-view.h  athena-image-properties-page.c  athena-image-properties-page.h  (+71 more)
test/: Makefile.am  Makefile.in  test-athena-directory-async.c  test-athena-search-engine.c  test-copy.c  test.c  test.h
(+1 files in other folders)
