NULL = 

SUBDIRS = reference

man_MANS = \
	athena.1 \
	athena-connect-server.1 \
	$(NULL)

EXTRA_DIST = \
	$(man_MANS) \
	architecture.txt \
	dnd.txt \
	load-states.dia \
	athena-internals.sxw \
	athena-internals.pdf \
	athena-io.txt \
	athena.faq \
	recommended-books.html \
	smoketests.html \
	state-machines.txt \
	style-guide.html \
	key_mouse_navigation.txt \
	$(NULL)
